@@ -1,3 +1,8 @@
+2002-03-21  Havoc Pennington  <hp@redhat.com>
+
+	* gconf/gconf-schema.c: move schema accessors to be functions not
+	macros.
+
 2002-03-20  Havoc Pennington  <hp@redhat.com>
 
 	* gconf/gconf-internals.c
